Aggiornato Hibernate